--- a/libft/Makefile
+++ b/libft/Makefile
@@ -7,8 +7,8 @@ SRC_PATH = .
 OBJ_PATH = obj
 
 SRC_FILES = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c\
-ft_isdigit.c ft_isprint.c ft_strchr.c ft_strlen.c ft_strncmp.c ft_strnstr.c\
-ft_strrchr.c ft_tolower.c ft_toupper.c
+ft_isdigit.c ft_isprint.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strlen.c\
+ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c
 
 BONUS_FILES =
 
