--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,9 +6,11 @@ INC_PATH = .
 SRC_PATH = .
 OBJ_PATH = obj
 
-SRC_FILES = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c\
-ft_isdigit.c ft_isprint.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strlen.c\
-ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c
+SRC_FILES = ft_atoi.c ft_bzero.c\
+ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c\
+ft_memset.c\
+ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strnstr.c ft_strrchr.c\
+ft_tolower.c ft_toupper.c
 
 BONUS_FILES =
 
